--- a/hint2mint/project/pilot/components/nifty.html
+++ b/hint2mint/project/pilot/components/nifty.html
@@ -31,7 +31,7 @@
       <div class="row align-items-center">
         
         <div class="col-11 col-xl-2">
-          <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="asset/images/logo.jpg" alt="immages/logo.jpg"><span class="text-primary"></span> </a></h1>
+          <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="asset/images/logo_hint2mint_hint2mint_hint2mint.jpg" alt="immages/logo_hint2mint_hint2mint_hint2mint.jpg"><span class="text-primary"></span> </a></h1>
         </div>
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
@@ -67,7 +67,7 @@
 <h2>Nifty or National Index Fifty<br>
     The flagship index on the National Stock Exchange of India Ltd. (NSE) </h2>
     - By Keshina Goyal<br><br>
-    <img src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg"
+    <img src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins_hint2mint_hint2mint_hint2mint.jpg"
 <br>
 <br>
 
