--- a/hint2mint/project/pilot/components/whichsector.html
+++ b/hint2mint/project/pilot/components/whichsector.html
@@ -31,7 +31,7 @@
       <div class="row align-items-center">
         
         <div class="col-11 col-xl-2">
-          <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="asset/images/logo.jpg" alt="immages/logo.jpg"><span class="text-primary"></span> </a></h1>
+          <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="asset/images/logo_hint2mint_hint2mint_hint2mint.jpg" alt="immages/logo_hint2mint_hint2mint_hint2mint.jpg"><span class="text-primary"></span> </a></h1>
         </div>
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
@@ -64,7 +64,7 @@
   </header>
 <body>
  <div class="blog1"><h2> Are you guys confused about which sector to invest in ?</h2> By Keshina Goyal<br><br>
-  <img src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg"><br>
+  <img src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k_hint2mint_hint2mint_hint2mint.jpg"><br>
   Due to the ongoing pandemic in the entire world the major four industries booming are:
   1. Pharmaceutical industries
   With the virus prevailing there is an enormous demand for sanitisers, cleaners etc which makes this industry booming currently in this situation. Also, people are full of hope with the pharmaceutical industry to come up with the vaccine to fight against the CORONA virus.
