--- a/hint2mint/project/version2/components/work-section/work-section.html
+++ b/hint2mint/project/version2/components/work-section/work-section.html
@@ -8,36 +8,28 @@
 </div>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-6 col-lg-4">
-      <a href="asset/images/works/img_1.jpg" class="media-1" data-fancybox="gallery">
-        <img src="asset/images/works/img_1.jpg" alt="Image" class="img-fluid">
-        <div class="media-1-content">
-          <h2>Risks and Rewards</h2>
-          <span class="category">of investing</span>
-        </div>
-      </a>
-    </div>
+    
     <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
-      <source src="asset/videos/our works/SakshiWebinar.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
+      <source src="asset/videos/our works/SakshiWebinar_hint2mint.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
     </video>
-        <source src="asset/videos/our works/SakshiWebinar.mp4" alt="video" class="img-fluid">
+        <source src="asset/videos/our works/SakshiWebinar_hint2mint.mp4" alt="video" class="img-fluid">
         </a>
     </div>
     <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
-      <source src="asset/videos/our works/KMVWebinarTrailer.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
+      <source src="asset/videos/our works/KMVWebinarTrailer_hint2mint.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
     </video>
-        <source src="asset/videos/our works/KMVWebinarTrailer.mp4" alt="video" class="img-fluid">
+        <source src="asset/videos/our works/KMVWebinarTrailer_hint2mint.mp4" alt="video" class="img-fluid">
         </a>
     </div>
     <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
-      <source src="asset/videos/our works/PDTrailer.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
+      <source src="asset/videos/our works/PDTrailer_hint2mint.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
     </video>
-        <source src="asset/videos/our works/PDTrailer.mp4" alt="video" class="img-fluid">
+        <source src="asset/videos/our works/PDTrailer_hint2mint.mp4" alt="video" class="img-fluid">
         </a>
     </div>
     <div class="col-md-6 col-lg-4">
-      <a href="asset/images/works/img_5.jpg" class="media-1" data-fancybox="gallery">
-        <img src="asset/images/works/img_5.jpg" alt="Image" class="img-fluid">
+      <a href="asset/images/works/understandingmarketbreadth_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+        <img src="asset/images/works/understandingmarketbreadth_hint2mint.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>Understanding Market Breadth</h2>
           <span class="category">Webinar</span>
@@ -45,11 +37,20 @@
       </a>
     </div>
     <div class="col-md-6 col-lg-4">
-      <a href="asset/images/works/img_6.jpg" class="media-1" data-fancybox="gallery">
-        <img src="asset/images/works/img_6.jpg" alt="Image" class="img-fluid">
+      <a href="asset/images/works/jargonsoffinancialmarket_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+        <img src="asset/images/works/jargonsoffinancialmarket_hint2mint.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>Jargons Of Financial Market</h2>
           <span class="category">Webinar</span>
+        </div>
+      </a>
+    </div>
+    <div class="col-md-6 col-lg-4">
+      <a href="asset/images/works/risksandrewards_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+        <img src="asset/images/works/risksandrewards_hint2mint.jpg" alt="Image" class="img-fluid">
+        <div class="media-1-content">
+          <h2>Risks and Rewards</h2>
+          <span class="category">of investing</span>
         </div>
       </a>
     </div>
