--- a/hint2mint/project/pilot/components/index.html
+++ b/hint2mint/project/pilot/components/index.html
@@ -67,7 +67,7 @@
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="asset/images/logo.jpg" alt="immages/logo.jpg"><span class="text-primary"></span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="asset/images/logo_hint2mint_hint2mint_hint2mint.jpg" alt="immages/logo_hint2mint_hint2mint_hint2mint.jpg"><span class="text-primary"></span> </a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -101,7 +101,7 @@
 
   
 
-    <div class="site-blocks-cover overlay" style="background-image: url('cover.jpg');" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay" style="background-image: url('cover_hint2mint_hint2mint_hint2mint.jpg');" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
 
@@ -179,8 +179,8 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 col-lg-4">
-            <a href="asset/images/img_1.jpg" class="media-1" data-fancybox="gallery">
-              <img src="asset/images/img_1.jpg" alt="Image" class="img-fluid">
+            <a href="asset/images/risksandrewards_hint2mint_hint2mint_hint2mint_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+              <img src="asset/images/risksandrewards_hint2mint_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
                 <h2>Bonzai Tree</h2>
                 <span class="category">Web Application</span>
@@ -188,8 +188,8 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
-            <a href="asset/images/img_2.jpg" class="media-1" data-fancybox="gallery">
-              <img src="asset/images/img_2.jpg" alt="Image" class="img-fluid">
+            <a href="asset/images/img_2_hint2mint_hint2mint_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+              <img src="asset/images/img_2_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
                 <h2>Simple Woman</h2>
                 <span class="category">Branding</span>
@@ -197,8 +197,8 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
-            <a href="asset/images/img_3.jpg" class="media-1" data-fancybox="gallery">
-              <img src="asset/images/img_3.jpg" alt="Image" class="img-fluid">
+            <a href="asset/images/img_3_hint2mint_hint2mint_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+              <img src="asset/images/img_3_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
                 <h2>Fruits</h2>
                 <span class="category">Website</span>
@@ -207,8 +207,8 @@
           </div>
 
           <div class="col-md-6 col-lg-4">
-            <a href="asset/images/img_4.jpg" class="media-1" data-fancybox="gallery">
-              <img src="asset/images/img_4.jpg" alt="Image" class="img-fluid">
+            <a href="asset/images/img_4_hint2mint_hint2mint_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+              <img src="asset/images/img_4_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
                 <h2>Design Material</h2>
                 <span class="category">Web Application</span>
@@ -216,8 +216,8 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
-            <a href="asset/images/img_5.jpg" class="media-1" data-fancybox="gallery">
-              <img src="asset/images/img_5.jpg" alt="Image" class="img-fluid">
+            <a href="asset/images/understandingmarketbreadth_hint2mint_hint2mint_hint2mint_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+              <img src="asset/images/understandingmarketbreadth_hint2mint_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
                 <h2>Handy Food</h2>
                 <span class="category">Branding</span>
@@ -225,8 +225,8 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
-            <a href="asset/images/img_6.jpg" class="media-1" data-fancybox="gallery">
-              <img src="asset/images/img_6.jpg" alt="Image" class="img-fluid">
+            <a href="asset/images/jargonsoffinancialmarket_hint2mint_hint2mint_hint2mint_hint2mint.jpg" class="media-1" data-fancybox="gallery">
+              <img src="asset/images/jargonsoffinancialmarket_hint2mint_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
                 <h2>Cat With Cup</h2>
                 <span class="category">Website</span>
@@ -246,7 +246,7 @@
             <div class="row align-items-center">
               <div class="col-lg-5">
                 
-                  <img src="asset/images/about_1.jpg" alt="Image" class="img-fluid mb-4 mb-lg-0">
+                  <img src="asset/images/about_1_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid mb-4 mb-lg-0">
                 
               </div>
               <div class="col-lg-3 ml-auto">
@@ -423,7 +423,7 @@
         <div class="row mb-5">
           
           <div class="col-md-5 ml-auto mb-5 order-md-2" data-aos="fade">
-            <img src="asset/images/about.jpg" alt="Image" class="img-fluid rounded">
+            <img src="asset/images/about_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid rounded">
           </div>
           <div class="col-md-6 order-md-1" data-aos="fade">
 
@@ -488,7 +488,7 @@
           <center>
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
             <div class="person text-center">
-              <img src="asset/images/image1.jpeg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+              <img src="asset/images/image1_hint2mint.jpeg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
               <h3>Dixita Jain</h3>
               <p class="position text-muted">Founder & Director</p>
               <p class="mb-4">Experienced Research Analyst and Assurance Associate with a demonstrated history of working in the Corporate world. 
@@ -517,7 +517,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <a href="whichsector.html"><img src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg" alt="Image" class="img-fluid"></a>
+              <a href="whichsector.html"><img src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid"></a>
               <h2 class="font-size-regular"><a href="whichsector.html">Which sector?</a></h2>
               <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span></div>
               <p>Due to the ongoing pandemic in the entire world the major four industries booming are:
@@ -528,7 +528,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <a href="nifty.html"><img src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg" alt="Image" class="img-fluid"></a>
+              <a href="nifty.html"><img src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid"></a>
               <h2 class="font-size-regular"><a href="nifty.html">Nifty or National Index Fifty</a></h2>
               <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span></div>
               <p>Nifty includes 50 largest and most liquid companies out of approximately 1600 companies traded on NSE, captures approximately 65% of its float-adjusted market capitalization and is a true reflection of the Indian stock market. Nifty is thus a highly diversified portfolio covering companies across 12 sectors.</p>
