--- a/hint2mint/project/version2/components/testimonials/testimonial.html
+++ b/hint2mint/project/version2/components/testimonials/testimonial.html
@@ -10,7 +10,7 @@
     <div class="testimonial">
 
       <blockquote class="mb-5">
-        <p>&ldquo;Respected ma'am,
+        <p>&ldquo;
           As planned, the activity of self introspection really helped me dive down to know myself more accurately and
           even better, the group interaction gave me so many ideas and viewpoints of different people regarding selling,
           marketing and branding. above that, the story telling question helped us realise how far we have come and how
