--- a/hint2mint/project/version2/components/work-section/work-section.html
+++ b/hint2mint/project/version2/components/work-section/work-section.html
@@ -8,23 +8,31 @@
 </div>
 <div class="container-fluid">
   <div class="row">
-    
+    <a href="asset/videos/our works/SakshiWebinar_hint2mint.mp4" class="media-1" data-fancybox="gallery">
     <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
       <source src="asset/videos/our works/SakshiWebinar_hint2mint.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
     </video>
-        <source src="asset/videos/our works/SakshiWebinar_hint2mint.mp4" alt="video" class="img-fluid">
+    <div class="media-1-content">
+      <h2>Webinar</h2>
+    </div>
         </a>
     </div>
+    <a href="asset/videos/our works/KMVWebinarTrailer_hint2mint.mp4" class="media-1" data-fancybox="gallery">
     <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
       <source src="asset/videos/our works/KMVWebinarTrailer_hint2mint.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
     </video>
-        <source src="asset/videos/our works/KMVWebinarTrailer_hint2mint.mp4" alt="video" class="img-fluid">
+    <div class="media-1-content">
+      <h2>Trailer</h2>
+    </div>
         </a>
     </div>
+    <a href="asset/videos/our works/PDTrailer_hint2mint.mp4" class="media-1" data-fancybox="gallery">
     <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
       <source src="asset/videos/our works/PDTrailer_hint2mint.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
     </video>
-        <source src="asset/videos/our works/PDTrailer_hint2mint.mp4" alt="video" class="img-fluid">
+    <div class="media-1-content">
+      <h2>Trailer</h2>
+    </div>
         </a>
     </div>
     <div class="col-md-6 col-lg-4">
